Fixed irregular clipping and z-index problem of review pictures. Also fixed scaling

--- a/css/style.css
+++ b/css/style.css
@@ -304,8 +304,16 @@ body {
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
+      @media (max-width: 56.25em) {
+        .composition__photo:hover {
+          transform: scale(1.6) translateY(-0.5rem);
+          z-index: 40; } }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
+    @media (max-width: 56.25em) {
+      .composition:hover .composition__photo:not(:hover) {
+        transform: scale(1.1);
+        z-index: 10; } }
 
 .row {
   max-width: 114rem;
@@ -353,11 +361,11 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 50% 100%, 0% 80%); }
+  clip-path: polygon(0% 0%, 100% 0%, 100% 85vh, 50vw 100%, 0% 85vh); }
   @media (max-width: 37.5em) {
     .header {
       height: 90vh;
-      clip-path: polygon(0% 0%, 100% 0%, 100% 78%, 50% 90%, 0% 80%); } }
+      clip-path: polygon(0% 0%, 100% 0%, 100% 80vh, 50vw 100%, 0% 80vh); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -370,6 +378,9 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+    @media (max-width: 56.25em) {
+      .header__text-box .heading-primary--sub {
+        font-size: 2rem; } }
 
 .navigation__checkbox {
   display: none; }
