--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -55,10 +55,20 @@
             transform: scale(1.05) translateY(-.5rem);//Increases size and pushes the hovered over image.
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
             z-index: 20;//Higher z-index so appears before lower one.
+
+            @include respond(tab-port) {
+                transform: scale(1.6) translateY(-.5rem);
+                z-index: 40;
+            }
         }
     }
 
     &:hover &__photo:not(:hover) {
         transform: scale(0.95);
+
+        @include respond(tab-port) {
+            transform: scale(1.1);
+            z-index: 10;
+        }
     }//Basically here we are selecting hover of composition, then selects all the photos that are not hovered over.
 }
